--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <link rel="stylesheet" href="/assets/bootstrap/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="/theme/css/styles.css" />
+    <link rel="stylesheet" href="/styles/css/styles.css" />
     <title>React App</title>
   </head>
   <body>
