--- a/public/index.html
+++ b/public/index.html
@@ -24,8 +24,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <link rel="stylesheet" href="/styles/bootstrap/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="/styles/css/styles.css" />
+    <!-- <link rel="stylesheet" href="../src/styles/bootstrap/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="../src/styles/css/styles.css" /> -->
     <title>React App</title>
   </head>
   <body>
